--- a/quizApp/src/main/resources/application.properties
+++ b/quizApp/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password = 0104
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# JWT configuration properties
+jwt.token.validity= 10000
+jwt.secret= qwerty
