--- a/quizApp/src/main/resources/application.properties
+++ b/quizApp/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=quizApp
 
 spring.datasource.url = jdbc:mysql://localhost:3306/questions_db
 spring.datasource.username = root
-spring.datasource.password = 0104
+spring.datasource.password = 13paslik
 
 #To show JPA info
 spring.jpa.show-sql=true
