--- a/quizApp/src/main/resources/application.properties
+++ b/quizApp/src/main/resources/application.properties
@@ -2,12 +2,16 @@ spring.application.name=quizApp
 
 spring.datasource.url = jdbc:mysql://localhost:3306/questions_db
 spring.datasource.username = root
-spring.datasource.password = 13paslik
+spring.datasource.password = 0104
 
 #To show JPA info
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
 
 # JWT configuration properties
 jwt.token.validity= 10000
